[project]
name = "learning-to-learn-jax"
version = "0.1.0"
description = "Learning to learn with JAX"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax[cuda12]>=0.4.31; sys_platform == 'linux'",
    "jax>=0.4.31; sys_platform == 'darwin'",
    "equinox>=0.11.7",
    "flax>=0.9.0",
    "matplotlib>=3.9.2",
    "optax>=0.2.3",
    "wandb>=0.18.3",
]
